Fix the top grid gap when pagination results are loaded
Unfortunately CSS custom properties don't work with selectors such as `nth-child` so I used a Sass variable to better indicate the start index.

The #1 `.product-grid` are the items before the sponsored section, #2 are the ones after, and #3 and on are products from pagination.

--- a/src/components/product/ProductGrid/product-grid.scss
+++ b/src/components/product/ProductGrid/product-grid.scss
@@ -10,7 +10,13 @@
   @include media(">=notebook") {
     --gap: var(--grid-gap-0);
 
+    $pagination-start-index: 3;
+
     grid-template-columns: repeat(4, 1fr);
+
+    &:nth-of-type(n + #{$pagination-start-index}) {
+      margin-top: var(--gap);
+    }
   }
 
   li {
